// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Filters Date Range 1`] = `
<Filters
  domainIndex={1}
  firstFilterTypeLabel="First Condition *"
  firstFilterValueLabel=""
  mvEnabled={true}
  onChange={[MockFunction]}
  range={true}
  secondFilterTypeLabel="Second Condition"
  secondFilterValueLabel=""
  type="date"
  validatorIndex={1}
>
  <div
    className="row domain-validator-filter-type-row"
  >
    <div
      className="col-xs-4"
    >
      <div
        id="domain-filter-type-label-1"
      >
        First Condition *
      </div>
    </div>
    <div
      className="col-xs-8"
    >
      <div>
        <select
          className="form-control"
          id="domainpropertiesrow-firstFilterType-1-1"
          name="domainpropertiesrow-firstFilterType"
          onChange={[Function]}
          required={true}
          value="eq"
        >
          <option
            key="dateeq"
            value="dateeq"
          >
            Equals
          </option>
          <option
            key="dateneq"
            value="dateneq"
          >
            Does Not Equal
          </option>
          <option
            key="dategt"
            value="dategt"
          >
            Is Greater Than
          </option>
          <option
            key="dategte"
            value="dategte"
          >
            Is Greater Than or Equal To
          </option>
          <option
            key="datelt"
            value="datelt"
          >
            Is Less Than
          </option>
          <option
            key="datelte"
            value="datelte"
          >
            Is Less Than or Equal To
          </option>
        </select>
      </div>
    </div>
  </div>
  <div
    className="row domain-validator-filter-row"
  >
    <div
      className="col-xs-4"
    >
      <div
        id="domain-filter-value-label-1"
      />
    </div>
    <div
      className="col-xs-8"
    >
      <div>
        <input
          className="form-control"
          disabled={false}
          id="domainpropertiesrow-firstFilterValue-1-1"
          name="domainpropertiesrow-firstFilterValue"
          onChange={[Function]}
          required={true}
          type="date"
          value=""
        />
      </div>
    </div>
  </div>
  <div
    className="row domain-validator-filter-type-row"
  >
    <div
      className="col-xs-4"
    >
      <div
        id="domain-filter-type-label-2"
      >
        Second Condition
      </div>
    </div>
    <div
      className="col-xs-8"
    >
      <div>
        <select
          className="form-control"
          id="domainpropertiesrow-secondFilterType-1-1"
          name="domainpropertiesrow-secondFilterType"
          onChange={[Function]}
          value="None"
        >
          <option
            key="None"
            value="None"
          >
            No other filter
          </option>
          <option
            key="dateeq"
            value="dateeq"
          >
            Equals
          </option>
          <option
            key="dateneq"
            value="dateneq"
          >
            Does Not Equal
          </option>
          <option
            key="dategt"
            value="dategt"
          >
            Is Greater Than
          </option>
          <option
            key="dategte"
            value="dategte"
          >
            Is Greater Than or Equal To
          </option>
          <option
            key="datelt"
            value="datelt"
          >
            Is Less Than
          </option>
          <option
            key="datelte"
            value="datelte"
          >
            Is Less Than or Equal To
          </option>
        </select>
      </div>
    </div>
  </div>
  <div
    className="row domain-validator-filter-bottom"
  >
    <div
      className="col-xs-4"
    >
      <div
        id="domain-filter-value-label-2"
      />
    </div>
    <div
      className="col-xs-8"
    >
      <div>
        <input
          className="form-control"
          disabled={true}
          id="domainpropertiesrow-secondFilterValue-1-1"
          name="domainpropertiesrow-secondFilterValue"
          onChange={[Function]}
          type="date"
          value=""
        />
      </div>
    </div>
  </div>
</Filters>
`;

exports[`Filters Empty Filters - string type 1`] = `
<Filters
  domainIndex={1}
  firstFilterTypeLabel="TypeLabel1"
  firstFilterValueLabel="ValueLabel1"
  mvEnabled={false}
  onChange={[MockFunction]}
  secondFilterTypeLabel="TypeLabel2"
  secondFilterValueLabel="ValueLabel2"
  type="string"
  validatorIndex={3}
>
  <div
    className="row domain-validator-filter-type-row"
  >
    <div
      className="col-xs-4"
    >
      <div
        id="domain-filter-type-label-1"
      >
        TypeLabel1
      </div>
    </div>
    <div
      className="col-xs-8"
    >
      <div>
        <select
          className="form-control"
          id="domainpropertiesrow-firstFilterType-1-3"
          name="domainpropertiesrow-firstFilterType"
          onChange={[Function]}
          required={true}
          value="eq"
        >
          <option
            key="HAS_ANY_VALUE"
            value="HAS_ANY_VALUE"
          >
            Has Any Value
          </option>
          <option
            key="eq"
            value="eq"
          >
            Equals
          </option>
          <option
            key="neqornull"
            value="neqornull"
          >
            Does Not Equal
          </option>
          <option
            key="isblank"
            value="isblank"
          >
            Is Blank
          </option>
          <option
            key="isnonblank"
            value="isnonblank"
          >
            Is Not Blank
          </option>
          <option
            key="gt"
            value="gt"
          >
            Is Greater Than
          </option>
          <option
            key="lt"
            value="lt"
          >
            Is Less Than
          </option>
          <option
            key="gte"
            value="gte"
          >
            Is Greater Than or Equal To
          </option>
          <option
            key="lte"
            value="lte"
          >
            Is Less Than or Equal To
          </option>
          <option
            key="contains"
            value="contains"
          >
            Contains
          </option>
          <option
            key="doesnotcontain"
            value="doesnotcontain"
          >
            Does Not Contain
          </option>
          <option
            key="doesnotstartwith"
            value="doesnotstartwith"
          >
            Does Not Start With
          </option>
          <option
            key="startswith"
            value="startswith"
          >
            Starts With
          </option>
          <option
            key="in"
            value="in"
          >
            Equals One Of
          </option>
          <option
            key="notin"
            value="notin"
          >
            Does Not Equal Any Of
          </option>
          <option
            key="containsoneof"
            value="containsoneof"
          >
            Contains One Of
          </option>
          <option
            key="containsnoneof"
            value="containsnoneof"
          >
            Does Not Contain Any Of
          </option>
          <option
            key="between"
            value="between"
          >
            Between, Inclusive (example usage: -4,4)
          </option>
          <option
            key="notbetween"
            value="notbetween"
          >
            Not Between, Exclusive (example usage: -4,4)
          </option>
        </select>
      </div>
    </div>
  </div>
  <div
    className="row domain-validator-filter-row"
  >
    <div
      className="col-xs-4"
    >
      <div
        id="domain-filter-value-label-1"
      >
        ValueLabel1
      </div>
    </div>
    <div
      className="col-xs-8"
    >
      <div>
        <input
          className="form-control"
          disabled={false}
          id="domainpropertiesrow-firstFilterValue-1-3"
          name="domainpropertiesrow-firstFilterValue"
          onChange={[Function]}
          required={true}
          type="text"
          value=""
        />
      </div>
    </div>
  </div>
  <div
    className="row domain-validator-filter-type-row"
  >
    <div
      className="col-xs-4"
    >
      <div
        id="domain-filter-type-label-2"
      >
        TypeLabel2
      </div>
    </div>
    <div
      className="col-xs-8"
    >
      <div>
        <select
          className="form-control"
          id="domainpropertiesrow-secondFilterType-1-3"
          name="domainpropertiesrow-secondFilterType"
          onChange={[Function]}
          value="None"
        >
          <option
            key="None"
            value="None"
          >
            No other filter
          </option>
          <option
            key="HAS_ANY_VALUE"
            value="HAS_ANY_VALUE"
          >
            Has Any Value
          </option>
          <option
            key="eq"
            value="eq"
          >
            Equals
          </option>
          <option
            key="neqornull"
            value="neqornull"
          >
            Does Not Equal
          </option>
          <option
            key="isblank"
            value="isblank"
          >
            Is Blank
          </option>
          <option
            key="isnonblank"
            value="isnonblank"
          >
            Is Not Blank
          </option>
          <option
            key="gt"
            value="gt"
          >
            Is Greater Than
          </option>
          <option
            key="lt"
            value="lt"
          >
            Is Less Than
          </option>
          <option
            key="gte"
            value="gte"
          >
            Is Greater Than or Equal To
          </option>
          <option
            key="lte"
            value="lte"
          >
            Is Less Than or Equal To
          </option>
          <option
            key="contains"
            value="contains"
          >
            Contains
          </option>
          <option
            key="doesnotcontain"
            value="doesnotcontain"
          >
            Does Not Contain
          </option>
          <option
            key="doesnotstartwith"
            value="doesnotstartwith"
          >
            Does Not Start With
          </option>
          <option
            key="startswith"
            value="startswith"
          >
            Starts With
          </option>
          <option
            key="in"
            value="in"
          >
            Equals One Of
          </option>
          <option
            key="notin"
            value="notin"
          >
            Does Not Equal Any Of
          </option>
          <option
            key="containsoneof"
            value="containsoneof"
          >
            Contains One Of
          </option>
          <option
            key="containsnoneof"
            value="containsnoneof"
          >
            Does Not Contain Any Of
          </option>
          <option
            key="between"
            value="between"
          >
            Between, Inclusive (example usage: -4,4)
          </option>
          <option
            key="notbetween"
            value="notbetween"
          >
            Not Between, Exclusive (example usage: -4,4)
          </option>
        </select>
      </div>
    </div>
  </div>
  <div
    className="row domain-validator-filter-bottom"
  >
    <div
      className="col-xs-4"
    >
      <div
        id="domain-filter-value-label-2"
      >
        ValueLabel2
      </div>
    </div>
    <div
      className="col-xs-8"
    >
      <div>
        <input
          className="form-control"
          disabled={true}
          id="domainpropertiesrow-secondFilterValue-1-3"
          name="domainpropertiesrow-secondFilterValue"
          onChange={[Function]}
          type="text"
          value=""
        />
      </div>
    </div>
  </div>
</Filters>
`;

exports[`Filters Expressions 1`] = `
<Filters
  domainIndex={1}
  expression="format.column~isblank="
  firstFilterTypeLabel="First Condition *"
  firstFilterValueLabel=""
  mvEnabled={true}
  onChange={[MockFunction]}
  prefix="format.column"
  secondFilterTypeLabel="Second Condition"
  secondFilterValueLabel=""
  type="int"
  validatorIndex={1}
>
  <div
    className="row domain-validator-filter-type-row"
  >
    <div
      className="col-xs-4"
    >
      <div
        id="domain-filter-type-label-1"
      >
        First Condition *
      </div>
    </div>
    <div
      className="col-xs-8"
    >
      <div>
        <select
          className="form-control"
          id="domainpropertiesrow-firstFilterType-1-1"
          name="domainpropertiesrow-firstFilterType"
          onChange={[Function]}
          required={true}
          value="neqornull"
        >
          <option
            key="HAS_ANY_VALUE"
            value="HAS_ANY_VALUE"
          >
            Has Any Value
          </option>
          <option
            key="eq"
            value="eq"
          >
            Equals
          </option>
          <option
            key="neqornull"
            value="neqornull"
          >
            Does Not Equal
          </option>
          <option
            key="isblank"
            value="isblank"
          >
            Is Blank
          </option>
          <option
            key="isnonblank"
            value="isnonblank"
          >
            Is Not Blank
          </option>
          <option
            key="gt"
            value="gt"
          >
            Is Greater Than
          </option>
          <option
            key="lt"
            value="lt"
          >
            Is Less Than
          </option>
          <option
            key="gte"
            value="gte"
          >
            Is Greater Than or Equal To
          </option>
          <option
            key="lte"
            value="lte"
          >
            Is Less Than or Equal To
          </option>
          <option
            key="in"
            value="in"
          >
            Equals One Of
          </option>
          <option
            key="notin"
            value="notin"
          >
            Does Not Equal Any Of
          </option>
          <option
            key="between"
            value="between"
          >
            Between, Inclusive (example usage: -4,4)
          </option>
          <option
            key="notbetween"
            value="notbetween"
          >
            Not Between, Exclusive (example usage: -4,4)
          </option>
          <option
            key="hasmvvalue"
            value="hasmvvalue"
          >
            Has a missing value indicator
          </option>
          <option
            key="nomvvalue"
            value="nomvvalue"
          >
            Does not have a missing value indicator
          </option>
        </select>
      </div>
    </div>
  </div>
  <div
    className="row domain-validator-filter-row"
  >
    <div
      className="col-xs-4"
    >
      <div
        id="domain-filter-value-label-1"
      />
    </div>
    <div
      className="col-xs-8"
    >
      <div>
        <input
          className="form-control"
          disabled={false}
          id="domainpropertiesrow-firstFilterValue-1-1"
          name="domainpropertiesrow-firstFilterValue"
          onChange={[Function]}
          required={true}
          type="number"
          value="-5"
        />
      </div>
    </div>
  </div>
  <div
    className="row domain-validator-filter-type-row"
  >
    <div
      className="col-xs-4"
    >
      <div
        id="domain-filter-type-label-2"
      >
        Second Condition
      </div>
    </div>
    <div
      className="col-xs-8"
    >
      <div>
        <select
          className="form-control"
          id="domainpropertiesrow-secondFilterType-1-1"
          name="domainpropertiesrow-secondFilterType"
          onChange={[Function]}
          value="hasmvvalue"
        >
          <option
            key="None"
            value="None"
          >
            No other filter
          </option>
          <option
            key="HAS_ANY_VALUE"
            value="HAS_ANY_VALUE"
          >
            Has Any Value
          </option>
          <option
            key="eq"
            value="eq"
          >
            Equals
          </option>
          <option
            key="neqornull"
            value="neqornull"
          >
            Does Not Equal
          </option>
          <option
            key="isblank"
            value="isblank"
          >
            Is Blank
          </option>
          <option
            key="isnonblank"
            value="isnonblank"
          >
            Is Not Blank
          </option>
          <option
            key="gt"
            value="gt"
          >
            Is Greater Than
          </option>
          <option
            key="lt"
            value="lt"
          >
            Is Less Than
          </option>
          <option
            key="gte"
            value="gte"
          >
            Is Greater Than or Equal To
          </option>
          <option
            key="lte"
            value="lte"
          >
            Is Less Than or Equal To
          </option>
          <option
            key="in"
            value="in"
          >
            Equals One Of
          </option>
          <option
            key="notin"
            value="notin"
          >
            Does Not Equal Any Of
          </option>
          <option
            key="between"
            value="between"
          >
            Between, Inclusive (example usage: -4,4)
          </option>
          <option
            key="notbetween"
            value="notbetween"
          >
            Not Between, Exclusive (example usage: -4,4)
          </option>
          <option
            key="hasmvvalue"
            value="hasmvvalue"
          >
            Has a missing value indicator
          </option>
          <option
            key="nomvvalue"
            value="nomvvalue"
          >
            Does not have a missing value indicator
          </option>
        </select>
      </div>
    </div>
  </div>
  <div
    className="row domain-validator-filter-bottom"
  >
    <div
      className="col-xs-4"
    >
      <div
        id="domain-filter-value-label-2"
      />
    </div>
    <div
      className="col-xs-8"
    >
      <div>
        <input
          className="form-control"
          disabled={true}
          id="domainpropertiesrow-secondFilterValue-1-1"
          name="domainpropertiesrow-secondFilterValue"
          onChange={[Function]}
          type="number"
          value=""
        />
      </div>
    </div>
  </div>
</Filters>
`;
